# SAKURA_Reasoning

./: .gitignore  2_pos_softmax_dynamic_evaluation_result_dynamic_vsv_lambda0.05.csv  2_softmax_dynamic_evaluation_result_dynamic_vsv_lambda0.05.csv  =2.5.0  =2.6.0  BOS_features_BOS_features.csv  BOS_features_BOS_stats.json  BOS_features_BOS_stats_with_correlations.json  BOS_features_analysis.json  BOS_features_cosine_correlation_lambda0.0.csv  DISCRIMINATIVE_EVALUATION_README.md  Qwen2Audio_patch.py  SLAandSteering.py  SLAandSteering_fisher.py  Test.py  TestSLA.py  adaptive_effect_evaluation_result_adaptive_effect_lambda0.02.csv  adaptive_effect_evaluation_result_adaptive_effect_lambda0.045.csv  adaptive_effect_evaluation_result_adaptive_effect_lambda0.05.csv  adaptive_negative_evaluation_result_adaptive_negative_lambda0.05.csv  analyze_sweep_results.py  angle_correlation_evaluation_result_angle_correlation_lambda0.05.csv  correlation_template_12L.json  correlation_template_6L.json  correlation_template_k4.json  cosine_correlation_evaluation_result_cosine_correlation_lambda0.001.csv  cosine_correlation_evaluation_result_cosine_correlation_lambda0.001_analysis.json  cosine_correlation_evaluation_result_cosine_correlation_lambda0.05_analysis.json  cosine_correlation_evaluation_result_qwen2_5omni_qwen2_5omni_cosine_correlation_lambda0.05.csv  cosine_correlation_evaluation_result_qwen2_5omni_qwen2_5omni_cosine_correlation_lambda0.05_analysis.json  count_yes_responses.py  data  data_prompt_evaluation_result.csv  data_prompt_evaluation_result_vsv_lambda0.0.csv  debug_exact_vsv.py  (+103 more)
(+371 files in other folders)
